--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,12 +1,20 @@
-﻿@using System.Net.Http
+﻿@using System.ComponentModel.DataAnnotations
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.EntityFrameworkCore
 @using Microsoft.JSInterop
 @using MudBlazor
 @using MudBlazorTest
 @using MudBlazorTest.Components
+@using MudBlazorTest.Components.Categories
+@using MudBlazorTest.Components.Friends
+@using MudBlazorTest.Components.Recipes
+@using MudBlazorTest.Data
+@using MudBlazorTest.Model
+@using MudBlazorTest.Services
 @using MudBlazorTest.Shared
