Change 'Read More' -> 'Détails'

--- a/Components/Card.razor
+++ b/Components/Card.razor
@@ -16,7 +16,7 @@
         @Content(Model)
     </MudCardContent>
     <MudCardActions>
-        <MudButton Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
+        <MudButton Variant="Variant.Text" Color="Color.Primary">Détails</MudButton>
         <MudIconButton Icon="@Icons.Material.Filled.Favorite" Color="Color.Default" />
         <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="Color.Default" @onclick="OpenDeleteDialog"/>
     </MudCardActions>
