--- a/Components/Recipes/RecipeTable.razor
+++ b/Components/Recipes/RecipeTable.razor
@@ -1,6 +1,7 @@
 @inject IAsyncRepository<Recipe> Repository
 
 <Table TModel=Recipe FilterFunc=FilterFunc>
+    <TableHeader>Toutes vos recettes</TableHeader>
     <HeaderContent>
         <MudTh>
             <MudTableSortLabel InitialDirection="SortDirection.Ascending" SortBy="new Func<Recipe, string>(x => x.Name)">
