--- a/_Imports.razor
+++ b/_Imports.razor
@@ -13,6 +13,7 @@
 @using MudBlazorTest.Components
 @using MudBlazorTest.Components.Categories
 @using MudBlazorTest.Components.Friends
+@using MudBlazorTest.Components.Meals
 @using MudBlazorTest.Components.Recipes
 @using MudBlazorTest.Data
 @using MudBlazorTest.Model
