--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -3,4 +3,5 @@
     <MudNavLink Href="/friends" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.People">Invités</MudNavLink>
     <MudNavLink Href="/recipes" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Cookie">Recettes</MudNavLink>
     <MudNavLink Href="/categories" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.Category">Catégories</MudNavLink>
+    <MudNavLink Href="/meals" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.SetMeal">Repas</MudNavLink>
 </MudNavMenu>
