Fix ListRecipe refreshing

--- a/Pages/ListRecipe.razor
+++ b/Pages/ListRecipe.razor
@@ -1,6 +1,6 @@
 @page "/recipes"
 
-<AddButton TAddDialog=RecipeAddDialog Title="Nouvelle recette" OnClose=StateHasChanged/>
+<AddButton TAddDialog=RecipeAddDialog Title="Nouvelle recette" OnClose=Refresh/>
 
 @* <RecipeTable /> *@
 
