--- a/Components/Recipes/RecipeCard.razor
+++ b/Components/Recipes/RecipeCard.razor
@@ -3,7 +3,9 @@
     <Header>
         <MudText Typo="Typo.h6">@recipe.Name</MudText>
     </Header>
-
+    <Button>
+        
+    </Button> 
     <Content>
         <MudText>@recipe.Description</MudText>
         <MudText Typo="Typo.body2">@recipe.Category.Name</MudText>
