--- a/Components/Friends/FriendCard.razor
+++ b/Components/Friends/FriendCard.razor
@@ -2,6 +2,7 @@
     <Header>
         <MudText Typo="Typo.h6">@context.Name @context.Surname</MudText>
     </Header>
+    <Button></Button>
     <Content>
     </Content>
 </Card>
