Keep improving, refactor Buttons and add

--- a/Components/Card.razor
+++ b/Components/Card.razor
@@ -7,17 +7,17 @@
         <CardHeaderContent>
             @Header(Model)
         </CardHeaderContent>
-        <CardHeaderActions>
-            @Button(Model)
-        </CardHeaderActions>
+        @* <CardHeaderActions>
+        </CardHeaderActions> *@
     </MudCardHeader>
     <MudCardContent>
         <MudText></MudText>
         @Content(Model)
     </MudCardContent>
     <MudCardActions>
-        <MudButton Variant="Variant.Text" Color="Color.Primary">Détails</MudButton>
-        <MudIconButton Icon="@Icons.Material.Filled.Favorite" Color="Color.Default" />
+        @Button(Model)
+        @* <MudButton Variant="Variant.Text" Color="Color.Primary">Détails</MudButton> *@
+        @* <MudIconButton Icon="@Icons.Material.Filled.Favorite" Color="Color.Default" /> *@
         <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="Color.Default" @onclick="OpenDeleteDialog"/>
     </MudCardActions>
 </MudCard>
