--- a/Components/Friends/FriendEditDialog.razor
+++ b/Components/Friends/FriendEditDialog.razor
@@ -1,11 +1,12 @@
-<AddDialog Model=friend>
+<EditDialog Model=Model>
     <Fields Context=friend>
         <MudTextField Label="Name" @bind-Value=friend.Name For="@(() => friend.Name)" />
         <MudTextField Label="Surname" @bind-Value=friend.Surname For="@(() => friend.Surname)" />
     </Fields>
-</AddDialog>
+</EditDialog>
 
 @code
 {
-    private Friend friend = new Friend();
+    [Parameter]
+    public Friend Model { get; set; }
 }
