--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,6 +11,7 @@
 @using MudBlazor
 @using MudBlazorTest
 @using MudBlazorTest.Components
+@using MudBlazorTest.Components.Buttons
 @using MudBlazorTest.Components.Categories
 @using MudBlazorTest.Components.Friends
 @using MudBlazorTest.Components.Meals
