--- a/Components/Card.razor
+++ b/Components/Card.razor
@@ -2,7 +2,7 @@
 
 @inject IDialogService DialogService
 
-<MudCard>
+<MudCard Style="width:200px">
     <MudCardHeader>
         <CardHeaderContent>
             @Header(Model)
