(Add|Edit)Dialog -> (Add|Edit)FormDialog renaming

--- a/Components/Categories/CategoryAddDialog.razor
+++ b/Components/Categories/CategoryAddDialog.razor
@@ -1,8 +1,8 @@
-<AddDialog TModel=Category Model=category>
+<AddFormDialog TModel=Category Model=category>
     <Fields Context=category>
         <MudTextField Label="Name" @bind-Value=category.Name For="@(() => category.Name)" />
     </Fields>
-</AddDialog>
+</AddFormDialog>
 
 @code
 {
