--- a/Components/Categories/CategoryEditDialog.razor
+++ b/Components/Categories/CategoryEditDialog.razor
@@ -1,8 +1,8 @@
-<EditDialog TModel=Category Model=Model>
+<EditFormDialog TModel=Category Model=Model>
     <Fields Context=category>
         <MudTextField Label="Name" @bind-Value=category.Name For="@(() => category.Name)" />
     </Fields>
-</EditDialog>
+</EditFormDialog>
 
 @code
 {
