--- a/Components/Friends/FriendAddDialog.razor
+++ b/Components/Friends/FriendAddDialog.razor
@@ -1,9 +1,9 @@
-<AddDialog Model=friend>
+<AddFormDialog Model=friend>
     <Fields Context=friend>
         <MudTextField Label="Name" @bind-Value=friend.Name For="@(() => friend.Name)" />
         <MudTextField Label="Surname" @bind-Value=friend.Surname For="@(() => friend.Surname)" />
     </Fields>
-</AddDialog>
+</AddFormDialog>
 
 @code
 {
