--- a/Components/Recipes/RecipeAddDialog.razor
+++ b/Components/Recipes/RecipeAddDialog.razor
@@ -1,10 +1,10 @@
-<AddDialog TModel=Recipe Model=recipe>
+<AddFormDialog TModel=Recipe Model=recipe>
     <Fields Context=recipe>
         <MudTextField Label="Name" @bind-Value=recipe.Name For="@(() => recipe.Name)" />
         <MudTextField Label="Description" @bind-Value=recipe.Description For="@(() => recipe.Description)" />
         <CategoryAutoComplete @bind-Category=recipe.Category />
     </Fields>
-</AddDialog>
+</AddFormDialog>
 
 @code
 {
