Create Forms directory

--- a/_Imports.razor
+++ b/_Imports.razor
@@ -14,6 +14,7 @@
 @using MudBlazorTest.Components.Buttons
 @using MudBlazorTest.Components.Categories
 @using MudBlazorTest.Components.Friends
+@using MudBlazorTest.Components.Forms
 @using MudBlazorTest.Components.Meals
 @using MudBlazorTest.Components.Recipes
 @using MudBlazorTest.Data
