--- a/Components/Categories/CategoryCard.razor
+++ b/Components/Categories/CategoryCard.razor
@@ -3,7 +3,7 @@
         <MudText Typo="Typo.h6">@category.Name</MudText>
     </Header>
     <Button>
-        <EditButton TEditDialog=CategoryEditDialog TModel=Category Model=category Title="Modifier catégorie" OnClose="Refresh" />
+        <EditButton TEditDialog=CategoryEditDialog TModel=Category Model=category Title="Modifier catégorie" OnSuccess=Refresh />
     </Button>
     <Content>
     </Content>
