--- a/Components/Friends/FriendCard.razor
+++ b/Components/Friends/FriendCard.razor
@@ -3,7 +3,7 @@
         <MudText Typo="Typo.h6">@context.Name @context.Surname</MudText>
     </Header>
     <Button>
-        <EditButton TEditDialog=FriendEditDialog TModel=Friend Model=Friend Title="Modification d'un invité" OnClose="Refresh" />
+        <EditButton TEditDialog=FriendEditDialog TModel=Friend Model=Friend Title="Modification d'un invité" OnSuccess="Refresh" />
     </Button>
     <Content>
     </Content>
