--- a/Pages/ListCategory.razor
+++ b/Pages/ListCategory.razor
@@ -1,6 +1,6 @@
 @page "/categories"
 
-<AddButton TAddDialog=CategoryAddDialog Title="Nouvelle catégorie" OnClose="Refresh" />
+<AddButton TAddDialog=CategoryAddDialog Title="Nouvelle catégorie" OnClose=Refresh />
 
 <CategoryGrid @ref="categoryGrid"/>
 
