--- a/Components/Forms/FormDialog.razor
+++ b/Components/Forms/FormDialog.razor
@@ -4,7 +4,7 @@
 <DataAnnotationsValidator />
 <MudDialog>
     <DialogContent>
-        @Fields(Model)
+        @Fields(model)
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
