--- a/Components/Recipes/RecipeCard.razor
+++ b/Components/Recipes/RecipeCard.razor
@@ -4,7 +4,7 @@
         <MudText Typo="Typo.h6">@recipe.Name</MudText>
     </Header>
     <Button>
-        
+        <EditButton TEditDialog=RecipeEditDialog TModel=Recipe Model=recipe Title="Modification d'une recette" OnSuccess=Refresh />
     </Button> 
     <Content>
         <MudText>@recipe.Description</MudText>
