--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -9,15 +9,15 @@
 @using Microsoft.EntityFrameworkCore
 @using Microsoft.JSInterop
 @using MudBlazor
-@using MudBlazorTest
-@using MudBlazorTest.Components
-@using MudBlazorTest.Components.Buttons
-@using MudBlazorTest.Components.Categories
-@using MudBlazorTest.Components.Friends
-@using MudBlazorTest.Components.Forms
-@using MudBlazorTest.Components.Meals
-@using MudBlazorTest.Components.Recipes
-@using MudBlazorTest.Data
-@using MudBlazorTest.Model
-@using MudBlazorTest.Services
-@using MudBlazorTest.Shared
+@using RemindMeal
+@using RemindMeal.Components
+@using RemindMeal.Components.Buttons
+@using RemindMeal.Components.Categories
+@using RemindMeal.Components.Friends
+@using RemindMeal.Components.Forms
+@using RemindMeal.Components.Meals
+@using RemindMeal.Components.Recipes
+@using RemindMeal.Data
+@using RemindMeal.Model
+@using RemindMeal.Services
+@using RemindMeal.Shared
