--- a/src/Pages/_Host.cshtml
+++ b/src/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace MudBlazorTest.Pages
+@namespace RemindMeal.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
