Create RemindMeal base component to inject JSRuntime

--- a/src/Components/Categories/CategoryAutoComplete.razor
+++ b/src/Components/Categories/CategoryAutoComplete.razor
@@ -1,5 +1,5 @@
+@inherits RemindMealComponent
 @inject IAsyncRepository<Category> CategoryRepository
-@inject IJSRuntime JSRuntime
 
 <MudAutocomplete
             T=Category
