--- a/src/Components/DeleteDialog.razor
+++ b/src/Components/DeleteDialog.razor
@@ -1,7 +1,6 @@
+@inherits RemindMealComponent
 @typeparam TModel
 @inject IAsyncRepository<TModel> Repository
-@inject IJSRuntime JSRuntime
-
 
 <EditForm EditContext=editContext OnValidSubmit=OnValidSubmit>
 <DataAnnotationsValidator />
