--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -19,5 +19,6 @@
 @using RemindMeal.Components.Recipes
 @using RemindMeal.Data
 @using RemindMeal.Model
+@using RemindMeal.ModelView
 @using RemindMeal.Services
 @using RemindMeal.Shared
