Big refacto - split Data to own project

--- a/src/Components/Friends/FriendAddDialog.razor
+++ b/src/Components/Friends/FriendAddDialog.razor
@@ -1,6 +1,11 @@
-<AddFormDialog TModel=Friend>
+<AddFormDialog TModel=Friend Model=friend>
     <Fields Context=friend>
         <MudTextField Label="Name" @bind-Value=friend.Name For="@(() => friend.Name)" />
         <MudTextField Label="Surname" @bind-Value=friend.Surname For="@(() => friend.Surname)" />
     </Fields>
 </AddFormDialog>
+
+@code
+{
+    private Friend friend = new Friend { Name = string.Empty, Surname = string.Empty };
+}
