--- a/src/Components/Categories/CategoryAddDialog.razor
+++ b/src/Components/Categories/CategoryAddDialog.razor
@@ -1,5 +1,10 @@
-<AddFormDialog TModel=Category>
+<AddFormDialog TModel=Category Model=category>
     <Fields Context=category>
         <MudTextField Label="Name" @bind-Value=category.Name For="@(() => category.Name)" />
     </Fields>
 </AddFormDialog>
+
+@code
+{
+    private Category category = new Category { Name = string.Empty };
+}
