--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -9,6 +9,9 @@
 @using Microsoft.EntityFrameworkCore
 @using Microsoft.JSInterop
 @using MudBlazor
+@using RemindMealData
+@using RemindMealData.Model
+@using RemindMealData.Services
 @using RemindMeal
 @using RemindMeal.Components
 @using RemindMeal.Components.Buttons
@@ -17,8 +20,5 @@
 @using RemindMeal.Components.Forms
 @using RemindMeal.Components.Meals
 @using RemindMeal.Components.Recipes
-@using RemindMeal.Data
-@using RemindMeal.Model
 @using RemindMeal.ModelView
-@using RemindMeal.Services
 @using RemindMeal.Shared
