--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -13,6 +13,7 @@
 @using RemindMeal.Components
 @using RemindMeal.Components.Buttons
 @using RemindMeal.Components.Categories
+@using RemindMeal.Components.Dialog
 @using RemindMeal.Components.Friends
 @using RemindMeal.Components.Forms
 @using RemindMeal.Components.Meals
