--- a/src/Components/Categories/CategoryCard.razor
+++ b/src/Components/Categories/CategoryCard.razor
@@ -1,13 +1,15 @@
-<Card Model=category Refresh=Refresh>
-    <Header>
-        <MudText Typo="Typo.h6">@category.Name</MudText>
-    </Header>
-    <Button>
+<MudCard Style="width:200px,height:800px">
+    <MudCardHeader>
+        <CardHeaderContent>
+            <MudText Typo="Typo.h6">@category.Name</MudText>
+        </CardHeaderContent>
+    </MudCardHeader>
+    <MudCardActions>
         <EditButton TEditDialog=CategoryEditDialog TModel=Category Model=category Title="Modifier catégorie" OnSuccess=Refresh />
-    </Button>
-    <Content>
-    </Content>
-</Card>
+        <DeleteButton Model=category Refresh=Refresh />
+    </MudCardActions>
+</MudCard>
+
 
 @code {
     [Parameter]
