--- a/src/Components/Friends/FriendCard.razor
+++ b/src/Components/Friends/FriendCard.razor
@@ -1,13 +1,20 @@
-<Card Model=Friend Refresh=Refresh>
-    <Header>
-        <MudText Typo="Typo.h6">@context.Name @context.Surname</MudText>
-    </Header>
-    <Button>
+<MudCard Style="width:200px,height:300px">
+    <MudCardHeader>
+        <CardHeaderAvatar>
+            <MudAvatar Color="Color.Secondary">@Friend.Initiales</MudAvatar>
+        </CardHeaderAvatar>
+        <CardHeaderContent>
+            <MudText Typo="Typo.h6">@Friend.Name @Friend.Surname</MudText>
+        </CardHeaderContent>
+    </MudCardHeader>
+    <MudCardContent>
+        <MudText></MudText>
+    </MudCardContent>
+    <MudCardActions>
         <EditButton TEditDialog=FriendEditDialog TModel=Friend Model=Friend Title="Modification d'un invité" OnSuccess="Refresh" />
-    </Button>
-    <Content>
-    </Content>
-</Card>
+        <DeleteButton Model=Friend Refresh=Refresh />
+    </MudCardActions>
+</MudCard>
 
 @code {
     [Parameter]
