WIP Add menu with MudDrag

--- a/src/Components/Recipes/RecipeAutoComplete.razor
+++ b/src/Components/Recipes/RecipeAutoComplete.razor
@@ -8,8 +8,8 @@
             @bind-Value=recipe
             SearchFunc="Search"
             ResetValueOnEmptyText=true
-            CoerceText=false
-            CoerceValue=false />
+            CoerceText=true
+            CoerceValue=true />
 
 @code
 {
