--- a/src/Shared/NavMenu.razor
+++ b/src/Shared/NavMenu.razor
@@ -4,5 +4,5 @@
     <MudNavLink Href="/recipes" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Cookie">Recettes</MudNavLink>
     <MudNavLink Href="/categories" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.Category">Catégories</MudNavLink>
     <MudNavLink Href="/meals" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.SetMeal">Repas</MudNavLink>
-    <MudNavLink Href="/meals/add" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.SetMeal">Creer Repas</MudNavLink>
+    <MudNavLink Href="/meals/add" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.SetMeal">Créer Repas</MudNavLink>
 </MudNavMenu>
